--- a/数据库新建.md
+++ b/数据库新建.md
@@ -1,7 +1,7 @@
 ```mysql
 DROP TABLE IF EXISTS `answer`;
 DROP TABLE IF EXISTS `answersheet`;
-DROP TABLE IF EXISTS `option`;
+DROP TABLE IF EXISTS `options`;
 DROP TABLE IF EXISTS `question`;
 DROP TABLE IF EXISTS `questionnaire`;
 DROP TABLE IF EXISTS `user`;
@@ -22,7 +22,7 @@ CREATE TABLE `answersheet` (
   PRIMARY KEY (`paperid`,`ip`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_general_ci;
 
-CREATE TABLE `option` (
+CREATE TABLE `options` (
   `selectid` int(11) NOT NULL,
   `questionid` int(11) NOT NULL,
   `goquestion` int(11) DEFAULT NULL,
@@ -36,7 +36,7 @@ CREATE TABLE `question` (
   `questionid` int(11) NOT NULL,
   `questiontitle` varchar(255) NOT NULL,
   `type` int(11) NOT NULL,
-  `ismust` bit(1) NOT NULL,
+  `ismust` int(11) NOT NULL,
   `min` int(11) DEFAULT NULL,
   `max` int(11) DEFAULT NULL,
   PRIMARY KEY (`paperid`,`questionid`)
@@ -45,7 +45,7 @@ CREATE TABLE `question` (
 CREATE TABLE `questionnaire` (
   `paperid` int(11) NOT NULL AUTO_INCREMENT,
   `papertitle` varchar(255) NOT NULL,
-  `ispublish` bit(1) NOT NULL,
+  `ispublish` int(11) NOT NULL,
   `userid` int(11) NOT NULL,
   `createtime` datetime NOT NULL,
   PRIMARY KEY (`paperid`)
