--- a/数据库设计.md
+++ b/数据库设计.md
@@ -1,48 +1,48 @@
-| 人员表     |               |               |          |                |                                                |
-| ---------- | ------------- | ------------- | -------- | -------------- | ---------------------------------------------- |
-| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 用户编号   | userid        | int           | N        | 主键           | 唯一主键，插入数据库时自增生成                 |
-| 密码       | password      | nvarchar(255) | N        |                |                                                |
-| 名称       | username      | varchar(255)  | N        |                |                                                |
-|            |               |               |          |                |                                                |
-| 问卷表     |               |               |          |                |                                                |
-| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 问卷编号   | paperid       | int           | N        | 主键           | 唯一主键，插入数据库时自增生成                 |
-| 标题       | papertitle    | varchar(255)  | N        |                |                                                |
-| 是否发布   | ispublish     | bool          | N        |                |                                                |
-| 用户编号   | userid        | int           | N        |                | N:1                                            |
-| 创建时间   | createtime    | date          | N        |                |                                                |
-|            |               |               |          |                |                                                |
-| 问题表     |               |               |          |                |                                                |
-| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 问卷编号   | papereid      | int           | N        | 主键           | N:1                                            |
-| 问题编号   | questionid    | int           | N        | 主键           | 对于问卷唯一,由前端生成给出，由0开始递增       |
-| 内容       | questiontitle | varchar(255)  | N        |                |                                                |
-| 题目类型   | type          | int           | N        |                | 0单选，1多选，2填空                            |
-| 是否必填   | ismust        | bool          | N        |                |                                                |
-| 最大选项数 | min           | int           | Y        | 如果单选就为空 |                                                |
-| 最小选项数 | max           | int           | Y        | 如果单选就为空 |                                                |
-|            |               |               |          |                |                                                |
-| 选项表     |               |               |          |                |                                                |
-| 栏目编号   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 选项编号   | selectid      | int           | N        | 主键           | 对于问题唯一主键，,由前端生成给出，由0开始递增 |
-| 问题编号   | questionid    | int           | N        | 主键           | N:1                                            |
-| 关联关系   | goquestion    | int           | Y        |                | 同一问卷里面编号在该问题编号后面的问题         |
-| 选项内容   | scontent      | varchar(255)  | N        |                |                                                |
-| 问卷编号   | paperid       | int           | N        | 主键           |                                                |
-|            |               |               |          |                |                                                |
-|            |               |               |          |                |                                                |
-| 回答表     |               |               |          |                |                                                |
-| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 问卷编号   | paperid       | int           | N        | 主键           |                                                |
-| 问题编号   | questionid    | int           | N        | 主键           |                                                |
-| 用户IP     | ip            | varchar(255)  | N        | 主键           |                                                |
-| 选项编号   | selectid      | int           | N        | 主键           | 填空题为0，选择题从1开始递增                   |
-| 填空内容   | answer        | varchar(255)  | Y        |                |                                                |
-|            |               |               |          |                |                                                |
-|            |               |               |          |                |                                                |
-| 总表       |               |               |          |                |                                                |
-| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                |
-| 问卷编号   | paperid       | int           | N        | 主键           |                                                |
-| 用户IP     | ip            | varchar(255)  | N        | 主键           |                                                |
-| 填写时间   | anstime       | date          | N        |                |                                                |
+| 人员表     |               |               |          |                |                                                              |
+| ---------- | ------------- | ------------- | -------- | -------------- | ------------------------------------------------------------ |
+| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 用户编号   | userid        | int           | N        | 主键           | 唯一主键，插入数据库时自增生成                               |
+| 密码       | password      | nvarchar(255) | N        |                |                                                              |
+| 名称       | username      | varchar(255)  | N        |                |                                                              |
+|            |               |               |          |                |                                                              |
+| 问卷表     |               |               |          |                |                                                              |
+| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 问卷编号   | paperid       | int           | N        | 主键           | 唯一主键，插入数据库时自增生成                               |
+| 标题       | papertitle    | varchar(255)  | N        |                |                                                              |
+| 是否发布   | ispublish     | int           | N        |                | 0为false,1为true,由于mysql不存在bool类型，其中js也不存在bit类型，故直接取0或者1的整数,question表的ismust同样 |
+| 用户编号   | userid        | int           | N        |                | N:1                                                          |
+| 创建时间   | createtime    | date          | N        |                |                                                              |
+|            |               |               |          |                |                                                              |
+| 问题表     |               |               |          |                |                                                              |
+| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 问卷编号   | papereid      | int           | N        | 主键           | N:1                                                          |
+| 问题编号   | questionid    | int           | N        | 主键           | 对于问卷唯一,由前端生成给出，由0开始递增                     |
+| 内容       | questiontitle | varchar(255)  | N        |                |                                                              |
+| 题目类型   | type          | int           | N        |                | 0单选，1多选，2填空                                          |
+| 是否必填   | ismust        | int           | N        |                | 0为false,1为true                                             |
+| 最大选项数 | min           | int           | Y        | 如果单选就为空 |                                                              |
+| 最小选项数 | max           | int           | Y        | 如果单选就为空 |                                                              |
+|            |               |               |          |                |                                                              |
+| 选项表     |               |               |          |                |                                                              |
+| 栏目编号   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 选项编号   | selectid      | int           | N        | 主键           | 对于问题唯一主键，,由前端生成给出，由0开始递增               |
+| 问题编号   | questionid    | int           | N        | 主键           | N:1                                                          |
+| 关联关系   | goquestion    | int           | Y        |                | 同一问卷里面编号在该问题编号后面的问题                       |
+| 选项内容   | scontent      | varchar(255)  | N        |                |                                                              |
+| 问卷编号   | paperid       | int           | N        | 主键           |                                                              |
+|            |               |               |          |                |                                                              |
+|            |               |               |          |                |                                                              |
+| 回答表     |               |               |          |                |                                                              |
+| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 问卷编号   | paperid       | int           | N        | 主键           |                                                              |
+| 问题编号   | questionid    | int           | N        | 主键           |                                                              |
+| 用户IP     | ip            | varchar(255)  | N        | 主键           |                                                              |
+| 选项编号   | selectid      | int           | N        | 主键           | 填空题为0，选择题从1开始递增                                 |
+| 填空内容   | answer        | varchar(255)  | Y        |                |                                                              |
+|            |               |               |          |                |                                                              |
+|            |               |               |          |                |                                                              |
+| 总表       |               |               |          |                |                                                              |
+| 栏目名称   | 列名          | 类型          | 可否为空 | 说明           |                                                              |
+| 问卷编号   | paperid       | int           | N        | 主键           |                                                              |
+| 用户IP     | ip            | varchar(255)  | N        | 主键           |                                                              |
+| 填写时间   | anstime       | date          | N        |                |                                                              |
