--- a/交叉分析白盒测试.md
+++ b/交叉分析白盒测试.md
@@ -8,7 +8,7 @@
 INSERT INTO questionnaire(papertitle,ispublish,userid,createtime) VALUES('交叉分析测试',0,1,'2019-07-27');
 
 INSERT INTO question(paperid,questionid,questiontitle,type,ismust) VALUES(5,0,'请问你喜欢什么样的球类',0,1);
-INSERT INTO question(paperid,questionid,questiontitle,type,ismust,min,max) VALUES(5,1,'请问你喜欢什么样的水果',0,1);
+INSERT INTO question(paperid,questionid,questiontitle,type,ismust) VALUES(5,1,'请问你喜欢什么样的水果',0,1);
 INSERT INTO question(paperid,questionid,questiontitle,type,ismust) VALUES(5,2,'请问你喜欢什么类型的歌',0,1);
 
 INSERT INTO options(paperid,questionid,selectid,scontent) VALUES(5,0,1,'篮球');
