--- a/测试.md
+++ b/测试.md
@@ -2,28 +2,29 @@
 
 <img src="测试img\114747571825921036.jpg" alt="114747571825921036" style="zoom:50%;" />
 <img src="测试img\135657120131641114.jpg" alt="135657120131641114" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\262088825370884904.jpg" alt="262088825370884904" style="zoom:50%;" />
+<img src="测试img\262088825370884904.jpg" alt="262088825370884904" style="zoom:50%;" />
 
 
 
 新建问卷
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\629236750417085440.jpg" alt="629236750417085440" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\534385174624803392.jpg" alt="534385174624803392" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\864342372892988472.jpg" alt="864342372892988472" style="zoom:50%;" />
+
+<img src="测试img\629236750417085440.jpg" alt="629236750417085440" style="zoom:50%;" />
+<img src="测试img\534385174624803392.jpg" alt="534385174624803392" style="zoom:50%;" />
+<img src="测试img\864342372892988472.jpg" alt="864342372892988472" style="zoom:50%;" />
 
 
 
 问卷管理
 
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\564382450944811814.jpg" alt="564382450944811814" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\41064662976041232.jpg" alt="41064662976041232" style="zoom:50%;" />
+<img src="测试img\564382450944811814.jpg" alt="564382450944811814" style="zoom:50%;" />
+<img src="测试img\41064662976041232.jpg" alt="41064662976041232" style="zoom:50%;" />
 
 
 
 问卷分析
 
-<img src="C:\Users\13721\Desktop\测试img\378587291115319205.jpg" alt="378587291115319205" style="zoom:50%;" />
-<img src="C:\Users\13721\Desktop\测试img\475687940314237109.jpg" alt="475687940314237109" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\361237256017505469.jpg" alt="361237256017505469" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\744188211147279158.jpg" alt="744188211147279158" style="zoom:50%;" />
-<img src="C:\Users\13721\AppData\Local\Temp\WeChat Files\343933817253115362.jpg" alt="343933817253115362" style="zoom:50%;" />
+<img src="测试img\378587291115319205.jpg" alt="378587291115319205" style="zoom:50%;" />
+<img src="测试img\475687940314237109.jpg" alt="475687940314237109" style="zoom:50%;" />
+<img src="测试img\361237256017505469.jpg" alt="361237256017505469" style="zoom:50%;" />
+<img src="测试img\744188211147279158.jpg" alt="744188211147279158" style="zoom:50%;" />
+<img src="测试img\343933817253115362.jpg" alt="343933817253115362" style="zoom:50%;" />
